--- a/goit/lesson_03/home_work/public/css/style.css
+++ b/goit/lesson_03/home_work/public/css/style.css
@@ -51,7 +51,8 @@
 }
 
 .right-content {
-    margin-left: 288px;
+    float: right;
+    width: 672px;
 }
 
 .left-menu {
@@ -62,7 +63,7 @@
     border-bottom: 1px solid #c8c8c8;
     color: #656363;
     display: block;
-    font-size: 13.33px;
+    font-size: 13px;
     padding: 15px 20px 10px;
     text-decoration: none;
 }
@@ -91,8 +92,7 @@
 
 .footer {
     background-color: #e1e1e1;
-    font-size: 13.33px;
-    height: 40px;
+    font-size: 13px;
     padding: 0 25px;
 }
 
@@ -103,7 +103,7 @@
 .menu.menu_footer .menu__item {
     color: #2c2c2c;
     text-align: left;
-    font-size: 13.33px;
+    font-size: 13px;
 }
 
 .menu.menu_footer .menu__item:hover, .menu.menu_footer .menu__item_active {
@@ -117,6 +117,11 @@
 
 .right-footer {
     float: right;
-    height: 40px;
     line-height: 40px;
+}
+
+.clearfix:after {
+    content:'';
+    clear: both;
+    display: block;
 }
