--- a/goit/lesson_04/public/css/style.css
+++ b/goit/lesson_04/public/css/style.css
@@ -1,10 +1,11 @@
-html, .body, .box {
-    height: 100%;
-}
-
 .body {
     background: #0c739f  url("../img/body_bg.png") repeat-x scroll 0 -38px;
     font-family: "Tahoma Regular";
+}
+
+.center {
+    width: 1000px;
+    margin: 0 auto;
 }
 
 .box {
@@ -13,8 +14,6 @@ html, .body, .box {
     -webkit-box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
-    width: 1000px;
-    margin: 0 auto;
 }
 
 
@@ -60,8 +59,8 @@ html, .body, .box {
 }
 
 .menu__li {
-    display: inline-block;
-    height: 30px;
+    display: block;
+    float: left;
     line-height: 30px;
     position: relative;
     width: 14%;
@@ -128,10 +127,10 @@ html, .body, .box {
 
 .content {
     background-color: #edeef0;
+    position: relative;
 }
 
 .content__center {
-    height: 100%;
     width: 1000px;
 }
 
@@ -181,7 +180,9 @@ html, .body, .box {
     height: 20px;
     line-height: 20px;
     padding: 10px 0;
+    position: absolute;
     text-align: center;
+    width: 100%;
 }
 
 .clearfix:after {
