--- a/goit/html/lesson_04/public/css/style.css
+++ b/goit/html/lesson_04/public/css/style.css
@@ -24,6 +24,10 @@
     margin: 5px 0 0 340px;
 }
 
+.contact__item {
+    display: block;
+}
+
 .logo {
     background: rgba(0, 0, 0, 0) url("../img/logo.png") repeat-x scroll 0 0;
     float: left;
