--- a/goit/html/lesson_06/public/css/style.css
+++ b/goit/html/lesson_06/public/css/style.css
@@ -47,6 +47,7 @@
 
 .menu__li {
     float: left;
+    padding: 0 10px;
 }
 
 .menu__a {
@@ -56,7 +57,6 @@
     text-transform: uppercase;
     text-decoration: none;
     line-height: 35px;
-    padding: 0 10px;
 }
 
 .menu_top .menu__a:hover {
@@ -86,6 +86,14 @@
     display: inline-block;
 }
 
+.menu__span {
+    display: block;
+    height: 35px;
+    line-height: 35px;
+    color: #fff;
+     font-size: 12px;
+}
+
 .menu-nav__footer {
     float: none;
     margin: 0;
@@ -97,6 +105,7 @@
 .logo-brand {
     padding: 35px 0 25px 0;
     text-align: center;
+    vertical-align: middle;
 }
 
 .logo-brand__item {
