--- a/goit/javascript/lesson_19-20/public/scss/banners-place.scss
+++ b/goit/javascript/lesson_19-20/public/scss/banners-place.scss
@@ -1,12 +1,12 @@
 .banners-place {
     float: right;
-    width: 50%;
-    padding: 65px 0 85px 0;
+    width: 48%;
+    padding: 60px 0 85px 0;
 
     .banners-place__title {
         color: #2a2d32;
         font-size: 24px;
-        padding-bottom: 50px;
+        height: 65px;
     }
 }
 
