--- a/goit/javascript/lesson_19-20/public/scss/f-contact.scss
+++ b/goit/javascript/lesson_19-20/public/scss/f-contact.scss
@@ -8,19 +8,20 @@
     }
 
     .f-contact__item.f-contact__item_location {
-        background: transparent url("/img/ico/location.png") no-repeat scroll 0 50%;
+        background: transparent url("../images/ico/location.png") no-repeat scroll 0 50%;
+
         padding-left: 24px;
         padding-right: 35px;
     }
 
     .f-contact__item.f-contact__item_phone {
-        background: transparent url("/img/ico/phone.png") no-repeat scroll 0 50%;
+        background: transparent url("../images/ico/phone.png") no-repeat scroll 0 50%;
         padding-left: 20px;
         padding-right: 40px;
     }
 
     .f-contact__item.f-contact__item_email {
-        background: transparent url("/img/ico/email.png") no-repeat scroll 0 50%;
+        background: transparent url("../images/ico/email.png") no-repeat scroll 0 50%;
         padding-left: 26px;
     }
 }
