--- a/goit/javascript/lesson_19-20/public/scss/footer-menu.scss
+++ b/goit/javascript/lesson_19-20/public/scss/footer-menu.scss
@@ -1,4 +1,5 @@
 .footer-menu {
+    height: 264px;
 
     .footer-menu__title{
         font-size: 16px;
@@ -10,16 +11,21 @@
     .footer-menu__col {
         width: 25%;
         float: left;
+        margin-right: 10px;;
+
+        &:last-child {
+            margin: 0;
+            width: auto;
+        }
 
 
         .footer-menu__ul {
             @extend ul;
-            margin: 50px 0 0 0;
+            margin: 38px 0 0 0;
 
             .footer-menu__li {
                 @extend li;
-                padding: 0 0 13px 0;
-                margin: 0 15% 13px 0;
+                margin: 0 10% 8px 0;
                 border-bottom: 1px solid #393c40;
             }
             .footer-menu__li:last-child {
@@ -27,11 +33,15 @@
             }
 
             .footer-menu__a {
-                color: rgba(255,255,255,0.5);
+                color: rgba(255, 255, 255, 0.5);
                 font-size: 13px;
                 text-decoration: none;
                 font-family: arial, serif;
+                margin: 0 0 12px 0;
                 font-weight: normal;
+                display: block;
+
+
                 &:hover {
                     color: #248cec;
                 }
