--- a/goit/javascript/lesson_19-20/public/scss/latest-news.scss
+++ b/goit/javascript/lesson_19-20/public/scss/latest-news.scss
@@ -1,15 +1,15 @@
 $widthHeight: 40px;
 
 .latest-news {
-    padding: 65px 0 85px 0;
+    padding: 60px 0 85px 0;
     background-color: #f7f7f7;
-    width: 50%;
+    width: 52%;
     float: left;
 
     .latest-news__title {
         color: #2a2d32;
         font-size: 24px;
-        padding-bottom: 50px;
+        height: 65px;
     }
 
     .latest-news__item {
