--- a/goit/javascript/lesson_19-20/public/scss/menu.scss
+++ b/goit/javascript/lesson_19-20/public/scss/menu.scss
@@ -24,10 +24,10 @@
 
     .menu__a {
         color: #fff;
-
         font-size: 14px;
         text-transform: uppercase;
         text-decoration: none;
+        font-family: ubuntu_condensedregular;
     }
 
     .menu__a:hover {
